[package]
name = "bo"
version = "0.1.4"
authors = ["Algermissen Jan <algermissen@acm.org>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["functional", "reader", "state"]
repository = "https://github.com/algermissen/bo"
homepage = "https://github.com/algermissen/bo"
description = """
Bo is a library for functional programming in rust.
"""
categories = ["data-structures"]

[dependencies]

